--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: flex-end;
 }
 
 .App-logo {
@@ -26,6 +28,23 @@
 
 .App-link {
   color: #61dafb;
+}
+
+h1 {
+  margin-top: 15px !important;
+}
+
+h2, h3 {
+  margin-top: 0 !important;
+}
+
+h4 {
+  margin-top: 20px !important;
+  margin-bottom: 5px !important;
+}
+
+.modal > .content > .spinner-container {
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
